projects section initial files

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+#notas
+https://www.youtube.com/watch?v=VoogNBSnpcA
+https://youtu.be/iP_HqoCuRI0
+https://github.com/briancodex/react-website-styled-components-v1
